--- a/src/Components/PokemonList/Pokemonlist.css
+++ b/src/Components/PokemonList/Pokemonlist.css
@@ -1,4 +1,24 @@
-.pokemon-list-wrapper{
-    margin: 1rem  auto;
+.pokemon-list-wrapper {
+    margin: 2rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+}
+
+.pokemon-wrapper {
+    /* margin: 0 auto; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    /* height: 400px; */
+}
+
+.controls button {
+    padding-top: 0.5rem;
+    padding-right: 1rem;
+    margin-left: 1rem;
+    padding-left: 1rem;
+    padding-bottom: 0.5rem;
 }
