--- a/src/Components/PokemonList/Pokemonlist.css
+++ b/src/Components/PokemonList/Pokemonlist.css
@@ -14,6 +14,9 @@
     justify-content: space-evenly;
     /* height: 400px; */
 }
+.controls{
+    margin: 4rem;
+}
 
 .controls button {
     padding-top: 0.5rem;
