--- a/src/Components/PokemonList/Pokemonlist.css
+++ b/src/Components/PokemonList/Pokemonlist.css
@@ -105,6 +105,7 @@
         flex-direction: column;
         align-items: center;
         gap: 1rem;
+        max-width: 600px;
     }
 
     .controls {
